media: fix vertical rhythm and alignment on media elements

--- a/style-guide/scss/modules/_media.scss
+++ b/style-guide/scss/modules/_media.scss
@@ -1,5 +1,5 @@
 @mixin media() {
-  margin-bottom: 1em;
+  margin-bottom: rhythm();
   overflow: auto;
   @content
 }
@@ -11,10 +11,14 @@
   float: $align;
   line-height: 0;
   @if $align == left {
-    margin-right: 1em;
+    margin-right: em($base-font-size);
   }
   @if($align == right) {
-    margin-left: 1em;
+    margin-left: em($base-font-size);
+  }
+  @if($align == none) {
+    margin-left: auto;
+    margin-right: auto;
   }
   @content;
 }
